<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_schedule_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="00:00"
                android:gravity="end|bottom"
                android:textSize="@dimen/schedule_title"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/item_schedule_ampm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_m"
                android:gravity="end|bottom"
                android:textSize="@dimen/schedule_subtitle_title"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/tv_item_schedule_conf_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_nombre_conferencia"
                android:textSize="@dimen/item_conf_title"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tv_item_schedule_conf_speaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_speaker_name"
                android:textSize="@dimen/item_conf_speaker"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tv_item_schedule_conf_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_speaker_name"
                android:textSize="@dimen/item_conf_tag"
                android:textColor="@color/colorWhite"
                android:ellipsize="end"
                android:lines="1"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>