<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:elevation="0dp"
            android:layout_margin="@dimen/cardview_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alto_image_view_home"
                    android:src="@drawable/banner_platzi_conf"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="inicio_frag_tv_que_es"
                    android:textStyle="bold"
                    android:textSize="@dimen/tamanio_titulo"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginRight="@dimen/margin_home_subtitulo"
                    android:layout_marginLeft="@dimen/margin_home_subtitulo"
                    android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inicio_frag_tv_que_es_resp"
                    android:textSize="@dimen/tamanio_subtitulo"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginRight="@dimen/margin_home_subtitulo"
                    android:layout_marginLeft="@dimen/margin_home_subtitulo"
                    android:layout_marginTop="@dimen/margin_home_subtitulo"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:elevation="0dp"
                android:layout_margin="@dimen/cardview_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/alto_image_view_home"
                        android:src="@drawable/platzi_conf_2"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanio_titulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/tamanio_subtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:elevation="0dp"
                android:layout_margin="@dimen/cardview_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/alto_image_view_home"
                        android:src="@drawable/platzi_conf_3"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanio_titulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/tamanio_subtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>